# hr-plus

./: .env.example  .gitignore  AUTHENTICATION_COMPLETE.md  CLAUDE.md  ELASTICSEARCH_SETUP.md  EMAIL_NOTIFICATIONS_COMPLETE.md  ERROR_HANDLING_COMPLETE.md  HR-PLUS-FEATURES-OVERVIEW.md  PROJECT_PLAN.md  PROJECT_STATUS.md  PUBLIC_CAREER_SITE_MVP_COMPLETE.md  PUBLIC_CAREER_SITE_PHASE2_PROGRESS.md  PUBLIC_CAREER_SITE_PLAN.md  README.md  RESUME_PARSING_COMPLETE.md  TESTING_INFRASTRUCTURE.md  docker-compose.yml  hr-platform-scope.md  package-lock.json  package.json  start-dev.sh
backend/: .env.example  conftest.py  pyproject.toml  test_resume_parser.py
backend/apps/accounts/: admin.py  candidate_services.py  documents.py  models.py  permissions.py  recommendation.py  resume_parser.py  search.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/analytics/: selectors.py  serializers.py  services.py  urls.py  views.py
backend/apps/applications/: admin.py  candidate_notifications.py  filters.py  models.py  selectors.py  serializers.py  services.py  signals.py  urls.py  views.py
backend/apps/assessments/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/communications/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/compliance/: admin.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
backend/apps/core/: authentication.py  (+8 more)
backend/config/: __init__.py  celery.py  urls.py
backend/requirements/: base.txt  development.txt  production.txt
(+312 files in other folders)
