[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hrplus"
version = "0.1.0"
description = "HR-Plus Enterprise HR Platform"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["apps", "config"]
extend-exclude = ["*/migrations/*"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "DJ", "T20"]
ignore = ["S101", "COM812", "A005", "DJ001"]

[tool.ruff.lint.isort]
known-first-party = ["apps", "config"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["tests.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = ["slow: marks tests as slow"]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
ignore_missing_imports = true
strict = false
warn_unused_configs = true

[tool.django-stubs]
django_settings_module = "config.settings.development"
